--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="popup-overlay">
       <div class="popup-container">
         <div class="popup-close">+</div>
-        <h2 class="popup-title">Hurry!! Limited Time Offer!</h2>
+        <h2 class="popup-title">Hi,Welcome To Amazing Toons India</h2>
         <p class="popup-description">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe culpa
-          non suscipit at, ut quia!
+          This is a website which available if cartoons and Toons In multi audio.
+And if u want to get more updates of these cartoons join on Telegram @kstoons
         </p>
-        <a href="#" class="popup-button">Buy Now</a>
+        <a href="#" class="popup-button">OK ! Go to website </a>
       </div>
     </div>
 
